@@ -3,6 +3,7 @@
 * Updated Makefile to push to Google Code as well.
 * Updated title in proposed 2.0 spec.
 * Added 2.0 spec.
+* Removed web2 examples.
 
 2012.01.06
 
